<resources>
    <string name="app_name">Swoosh Project</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">Find a team in your city, and dominate the league.
    </string>
    <string name="get_started">GET STARTED</string>
    <string name="todo">TODO</string>
    <string name="background_image">background image</string>
    <string name="desired_league">Desired League</string>
    <string name="mens">Mens</string>
    <string name="co_ed">CO-ED</string>
    <string name="womens">Womens</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="co_ed">CO-ED</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="co_ed">CO-ED</string>
    <string name="next">Next</string>
</resources>
