<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".league_ctivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/desiredleaguebg"
            android:id="@+id/imageView3" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.498" android:scaleType="centerCrop"
            android:contentDescription="@string/background_image"/>
    <ImageView
            android:layout_width="85dp"
            android:layout_height="49dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView2" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="28dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.487" android:contentDescription="@string/todo"/>
    <TextView
            android:text="@string/desired_league"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textColor="@color/colorAccent" android:fontFamily="@font/montserrat"
            android:layout_marginTop="15dp" app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="381dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="100dp" app:layout_constraintTop_toBottomOf="@+id/textView4">
        <ToggleButton
                android:text="@string/mens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="224dp"
                tools:layout_editor_absoluteX="171dp" android:id="@+id/toggleButton"
                android:textOff="@string/mens" android:textOn="@string/mens" android:fontFamily="@font/montserrat"
                android:textColor="@color/colorAccent" android:background="@drawable/swoosh_toggle"/>
        <ToggleButton
                android:text="@string/womens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/toggleButton2" android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp" android:textOff="@string/womens"
                android:textOn="@string/womens" android:fontFamily="@font/montserrat" android:textColor="@color/colorAccent"
                android:background="@drawable/swoosh_toggle"/>
        <ToggleButton
                android:text="@string/co_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/toggleButton3" android:textOff="@string/co_ed"
                android:textOn="@string/co_ed" android:fontFamily="@font/montserrat" android:textColor="@color/colorAccent"
                android:background="@drawable/swoosh_toggle"/>
    </LinearLayout>
    <Button
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button3" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:background="@drawable/swoosh_button"
            android:textColor="@color/colorAccent"/>
</android.support.constraint.ConstraintLayout>